fix mobile: page jumps, when navbar from mobile browser slides in, because view height changes
change font sizes to rem.
for responsivness add clamp

add contact section

--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+/*
+    ToDos:
+    - layer und My Work react on hover, how to do it on touchscreen? maybe something like: "click to see more"
+*/
+
 *{
   margin: 0;
   padding: 0;
@@ -11,6 +16,7 @@ body{
 #header{
   width: 100%;
   height: 1000px;
+  min-height: -webkit-fill-available;
   max-height: 100vh; /* topin: should be deleted, because otherwise the background image goes into the left side */
   background-image: url(images/background_image.png);
   background-size: cover;
@@ -29,7 +35,7 @@ body{
 
     }
       .logo{
-        width: 140px;
+        width: clamp(50px, 16vw, 140px);
       }
       nav ul li{
         display: inline-block; /* horizontal alignment */
@@ -38,7 +44,7 @@ body{
         nav ul li a{
           color: #fff;
           text-decoration: none;
-          font-size: 18px;
+          font-size: clamp(1rem, 1vw + 0.5rem, 1.2rem);
           position: relative; /* relative for the underline */
         }
         nav ul li a::after{
@@ -56,11 +62,11 @@ body{
         }
     .header-text{
       margin-top: 20px;
-      font-size: 30px;
+      font-size: clamp(1rem, 3vw + 0.5rem, 2rem);
       max-width: 50vw;
     }
       .header-text h1{
-        font-size: 60px;
+        font-size: clamp(1rem, 5vw + 0.5rem, 3rem);
         margin-top: 20px;
       }
       .header-text h1 span{
@@ -82,12 +88,16 @@ body{
       .about-col-1 img{
         border-radius: 15px;
         width: 100%;
+        transition: transform 0.5s;
+      }
+      .about-col-1 img:hover{
+        transform: scale(1.5);
       }
     .about-col-2{
       flex-basis: 60%;
     }
       .sub-title{
-        font-size: 60px;
+        font-size: clamp(1rem, 5vw + 0.5rem, 5rem);
         font-weight: 600;
       }
       .tab-titles{
@@ -96,7 +106,7 @@ body{
       }
         .tab-links{
           margin: 0 50px 0 0;
-          font-size: 18px;
+          font-size: 1.1rem;
           font-weight: 600;
           cursor: pointer;
           position: relative;
@@ -126,7 +136,7 @@ body{
         }
           .tab-contents ul li span{
             color: #81062d;
-            font-size: 14px;
+            font-size: 0.9rem;
             font-weight: 600;
           }
 /* ****************services *************/
@@ -158,7 +168,7 @@ body{
 .services-list div{
   background: #262626;
   padding: 40px;
-  font-size: 14px;
+  font-size: 0.9rem;
   font-weight: 300;
   border-radius: 10px;
   transition: 0.5s;
@@ -171,7 +181,7 @@ body{
   font-size: 40px;
 }
 .services-list div h2{
-  font-size: 30px;
+  font-size: 2rem;
   margin-bottom: 15px;
   font-weight: 600;
 }
@@ -179,7 +189,7 @@ body{
 .services-list div a{
   text-decoration: none;
   color: #fff;  
-  font-size: 12px;
+  font-size: 0.8rem;
   margin-top: 20px;
   display: block; /* a tag is an inline element, so we have to change its display property to block/inline-block. The difference between block and inline-block is, that inline-block does not add a line-break after the element */
   transition: 0.5s;
@@ -248,17 +258,17 @@ body{
 }
 .layer h3{
   font-weight: 600;
-  font-size: 20px;
+  font-size: 1.1rem;
 }
 .layer p{
   font-weight: 600;
-  font-size: 14px;
+  font-size: 0.9rem;
 }
 .layer a{
   margin-top: 20px;
   color: #81062d;
   text-decoration: none;
-  font-size: 18px;
+  font-size: 1.1rem;
   line-height: 60px;
   background: #fff;
   width: 60px;
@@ -276,7 +286,62 @@ body{
   text-decoration: none;
   color: #fff;
   transition: background 0.3s;
+  text-align: center;
 }
 .btn:hover{
   background: #81062d;
+}
+/* **********contact ***********/
+.contact-left{
+  flex-basis: 35%;
+}
+.contact-left p{
+  margin-top: 30px;
+}
+.contact-left p i{
+  color: #ff004f;
+  margin-right: 15px;
+  font-size: 1.5rem;
+}
+.contact-right{
+  flex-basis: 60%;
+}
+.social-icons{
+  margin-top: 30px;
+}
+.social-icons a{
+  text-decoration: none;
+  font-size: 1.5rem;
+  margin-right: 15px;
+  color: #ababab;
+  display: inline-block; /* inline: the icons are inline, block: each block can be given a height.*/
+  transition: transform 0.5s;
+}
+.social-icons a:hover{
+  color: #ff004f;
+  transform: scale(1.5);
+}
+.btn.btn2{
+  display: inline-block;
+  background-color: #81062d;
+}
+.contact-right form{
+  width: 100%; /* is that needed here */
+}
+form input, form textarea{
+  width: 100%;
+  border: 0;
+  outline: none;
+  background: #262626;
+  padding: 15px;
+  margin: 15px;
+  color: #fff;
+  font-size: 1.1rem;
+  border-radius: 6px
+}
+form .btn2{
+  padding: 14PX 60px;
+  font-size: 1.1rem;
+  margin-top: 20px;
+  cursor: pointer;
 }
